src/ui/components/atoms/user-text-stat/UserTextStat.module.scss
@import '../../../../globals/variables';
@import '../../../../globals/mixins';

.user-text-stat {
  align-items: flex-start;
  border-radius: 12px;
  box-shadow: 0 4px 12px rgba(0 0 0 / 8%);
  display: flex;
  font-family: Inter, sans-serif;
  gap: 1rem;
  max-width: 740px;
  padding: 1.75rem 2rem;
  width: 100%;

  &.white {
    background-color: $ads-color-main;
  }

  &.lavender {
    background-color: $ads-color-brand-primary-50;
  }

  &.gray {
    background-color: $ads-color-gray-soft-50;
  }

  .checkbox {
    height: 20px;
    margin-top: 6px;
    width: 20px;
  }

  .avatar {
    border-radius: 50%;
    height: 40px;
    object-fit: cover;
    width: 40px;
  }

  .content {
    display: flex;
    flex-direction: column;

    .user {
      color: $ads-color-gray-strong-900;
      font-size: 1rem;
      font-weight: 700;
    }

    .text {
      color: $ads-color-gray-soft-400;
      font-size: 0.875rem;
      font-weight: 400;
      line-height: 1.4;
      margin-top: 0.25rem;
    }

    .timestamp {
      color: $ads-color-black-300;
      font-size: 0.75rem;
      margin-top: 0.5rem;
    }
  }
}

